ISS-11-17-49 - Fixed Spacing below Main Hero Box

--- a/styles/tips-for-strensiq.css
+++ b/styles/tips-for-strensiq.css
@@ -154,7 +154,7 @@
     }
 
     .hpp-dtc-m-hero .content {
-        margin-bottom: 5rem;
+        margin-bottom: 4rem;
     }
 
     .tips-hero .hero-box {
@@ -219,7 +219,7 @@
 
     .hpp-dtc-m-hero.internal-hero.tips-for-using-strensiq-hero .content .pre-title {
         left: 0;
-        margin-top: 4rem;
+        margin-top: 35px;
     }
 
     [data-module=HeroModule] .row.mx-0:after {
